fixed grid again - img do not overflow

--- a/ClassArtMemGam.css
+++ b/ClassArtMemGam.css
@@ -4,6 +4,7 @@ body {
     font-family: 'Lato', sans-serif;       
     user-select: none;
     background-image: url(bg-scales.png);
+    box-sizing: border-box;
 }
 
 main {
@@ -76,21 +77,19 @@ transition: transform .3s cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
 #boardgame {
-    width: 60vw;
+    /* width: 60vw; */
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 2rem;
     display:grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 2rem;
+    grid-template-columns: repeat(4, minmax(50px, 190px));
+    gap: 10px;
     place-items: center;
     
 
 }
 
 .card {
-    max-width: 10vw;
-    max-height: 10vw;
     border-radius: 12px;
     border: 4px solid #A03978;
     transition: all .3s cubic-bezier(0.165, 0.84, 0.44, 1);
@@ -102,12 +101,12 @@ filter: brightness(90%);
 
 .card img {
     width:100%;
+    display: block;
     object-fit: cover;
     aspect-ratio: 1/1;
     border-radius: 8px;
     visibility: hidden;
-    background-size: cover;
-    background-position: center;
+   
 }
 
 .gameStarted:hover {
@@ -117,12 +116,10 @@ filter: brightness(90%);
 }
 
 .flipped img {
-    width: 100%;
-    object-fit: cover;
+ 
     filter: brightness(100%);
     visibility: visible;
-    /* background-size: cover;
-    background-position: center; */
+   
 }
 
 .matched {
